welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:14: error: not found: value getColorSol
if(getCouleurSol() == Color.pink || getColorSol()==Color.orange){
                                    ^